# fastapi-twelve-factor-approach-boilerplate

./: .env.example  .gitignore  README.md  pyproject.toml
app/: main.py
app/api/v1/: routers.py
app/api/v1/endpoints/: auth.py  health.py  scans.py  tasks.py  users.py
app/core/: auth.py  config.py  dependencies.py
app/database/: base.py  db_instance.py  session.py
app/database/models/: __init__.py  scan.py  user.py
app/database/repositories/: mongo_repository.py  postgres_repository.py  scan_repository.py  user_repository.py
app/schemas/: __init__.py  scan.py  user.py
app/services/: auth_service.py  base_service.py  health_service.py  oauth_service.py  scan_service.py  user_service.py
app/utils/: init_db_containers.py
tests/services/: test_auth.py  test_scan_service.py
