[project]
name = "fastapi-twelve-factor-approach-boilerplate"
version = "0.1.0"
description = "Fastapi boilerplate based on the twelve-factor app approach."
authors = [
    {name = "Yariv Garala"}
]
readme = "README.md"
requires-python = ">=3.9,<4.0"
dependencies = [
    "fastapi (>=0.115.8,<0.116.0)",
    "annotated-types (>=0.7.0,<0.8.0)",
    "anyio (>=4.8.0,<5.0.0)",
    "certifi (>=2025.1.31,<2026.0.0)",
    "click (>=8.1.8,<9.0.0)",
    "dnspython (>=2.7.0,<3.0.0)",
    "email-validator (>=2.2.0,<3.0.0)",
    "fastapi-cli (>=0.0.7,<0.0.8)",
    "h11 (>=0.14.0,<0.15.0)",
    "httpcore (>=1.0.7,<2.0.0)",
    "httptools (>=0.6.4,<0.7.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "idna (>=3.10,<4.0)",
    "jinja2 (>=3.1.5,<4.0.0)",
    "markdown-it-py (>=3.0.0,<4.0.0)",
    "markupsafe (>=3.0.2,<4.0.0)",
    "mdurl (>=0.1.2,<0.2.0)",
    "pydantic (>=2.10.6,<3.0.0)",
    "pydantic-core (>=2.28.0,<3.0.0)",
    "pygments (>=2.19.1,<3.0.0)",
    "python-dotenv (>=1.0.1,<2.0.0)",
    "python-multipart (>=0.0.20,<0.0.21)",
    "pyyaml (>=6.0.2,<7.0.0)",
    "rich (>=13.9.4,<14.0.0)",
    "rich-toolkit (>=0.13.2,<0.14.0)",
    "shellingham (>=1.5.4,<2.0.0)",
    "sniffio (>=1.3.1,<2.0.0)",
    "starlette (>=0.45.3,<0.46.0)",
    "typer (>=0.15.1,<0.16.0)",
    "typing-extensions (>=4.12.2,<5.0.0)",
    "uvicorn (>=0.34.0,<0.35.0)",
    "uvloop (>=0.21.0,<0.22.0)",
    "watchfiles (>=1.0.4,<2.0.0)",
    "websockets (>=14.2,<15.0)",
    "psycopg2-binary (>=2.9.10,<3.0.0)",
    "pydantic-settings (>=2.7.1,<3.0.0)",
    "asyncpg (>=0.30.0,<0.31.0)",
    "passlib[bcrypt] (>=1.7.4,<2.0.0)",
    "pyjwt (>=2.10.1,<3.0.0)",
    "authlib (>=1.4.1,<2.0.0)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false
